tests/baselines/reference/autoLift2.errors.txt
==== tests/cases/compiler/autoLift2.ts (10 errors) ====
    class A
    
    {
        constructor() {
            this.foo: any;
                    ~
!!! error TS1005: ';' expected.
                 ~~~
!!! error TS2094: The property 'foo' does not exist on value of type 'A'.
                      ~~~
!!! error TS2095: Could not find symbol 'any'.
            this.bar: any;
                    ~
!!! error TS1005: ';' expected.
                 ~~~
!!! error TS2094: The property 'bar' does not exist on value of type 'A'.
                      ~~~
!!! error TS2095: Could not find symbol 'any'.
        }
    
    
      baz() {
    
         this.foo = "foo";
              ~~~
!!! error TS2094: The property 'foo' does not exist on value of type 'A'.
    
         this.bar = "bar";
              ~~~
!!! error TS2094: The property 'bar' does not exist on value of type 'A'.
    
         [1, 2].forEach((p) => this.foo);
                                    ~~~
!!! error TS2094: The property 'foo' does not exist on value of type 'A'.
    
         [1, 2].forEach((p) => this.bar);
                                    ~~~
!!! error TS2094: The property 'bar' does not exist on value of type 'A'.
    
      }
    
    }
    
    
    
    var a = new A();
    
    a.baz();
    
    
    